# Devin-Game-Izola

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindSDL2TTF.cmake
config/: game.txt  menu.txt  player1.txt  player2.txt
headers/: CMakeLists.txt  Cell.h  Common.h  Engine.h  Game.h  Menu.h  Player.h  World.h
src/: CMakeLists.txt  Cell.cpp  Engine.cpp  Game.cpp  Menu.cpp  Player.cpp  World.cpp  main.cpp
